final draft incl problems with js

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -86,10 +86,10 @@
                 <img class="main__form-image" src="./assets/Images/Mohan-muruge.jpg" alt="commentator image">
                 <div class="main__name-comment-holder">
                     <label class="main__form-name-label" for="name">NAME</label>
-                    <input class="main__form-name" type="text" placeholder="Enter your name" name="name" />
+                    <input class="main__form-name" type="text" value="" placeholder="Enter your name" name="name" />
                     <label class="main__form-comment-label" for="comment">COMMENT</label>
                     <!-- instead of an input for comment, maybe create a textarea -->
-                    <textarea class="main__form-comment" type="text" placeholder="Add a new comment" name="comment"></textarea>
+                    <textarea class="main__form-comment" type="text" value="" placeholder="Add a new comment" name="comment"></textarea>
                     <button class="main__form-button" type="submit">COMMENT</button>
                 </div>
             </form>
@@ -97,7 +97,7 @@
 
         <section class="main__new-comments">
             <!-- The comments section (until the footer) will be recreated using JS -->
-            <div class="main__comment-container">
+            <!-- <div class="main__comment-container">
                 <img class="main__form-image" src="./assets/Images/Mohan-muruge.jpg" alt="commentator image">
                 <div class="main__comment">
                     <div class="main__comment-one-container">
@@ -128,8 +128,7 @@
                     </div>
                     <p class="main__comment-comment">They BLEW the ROOF off at their last show, once everyone started figuring out they were going. This is still simply the greatest opening of a concert I have EVER witnessed.</p>
                 </div>
-            </div>                
-            <!-- comment out until here -->
+            </div>                 -->
         </section>
 
         <footer class="main__footer">
