created the for loop, removed text decoration from bio and shows

--- a/sprint-3/index.html
+++ b/sprint-3/index.html
@@ -19,7 +19,7 @@
             
                 <div class="main__nav-bar-list">
                     <p class="main__nav-bar-list-item main__bio-border">Biography</p>
-                    <a href="./second-page/shows.html">
+                    <a class="main__no-underline" href="./second-page/shows.html">
                         <p class="main__nav-bar-list-item main__nav-bar-item-opacity">Shows</p>
                     </a>
                 </div>
@@ -88,7 +88,6 @@
                     <label class="main__form-name-label" for="name">NAME</label>
                     <input class="main__form-name" type="text" value="" placeholder="Enter your name" name="name" />
                     <label class="main__form-comment-label" for="comment">COMMENT</label>
-                    <!-- instead of an input for comment, maybe create a textarea -->
                     <textarea class="main__form-comment" type="text" value="" placeholder="Add a new comment" name="comment"></textarea>
                     <button class="main__form-button" type="submit">COMMENT</button>
                 </div>
