--- a/sprint-3/second-page/shows.html
+++ b/sprint-3/second-page/shows.html
@@ -19,7 +19,7 @@
                 </div>
             
                 <div class="main__nav-bar-list">
-                    <a href="../index.html">
+                    <a class="main__no-underline" href="../index.html">
                         <p class="main__nav-bar-list-item main__nav-bar-item-opacity">Biography</p>
                     </a>
                     <p class="main__nav-bar-list-item main__bio-border">Shows</p>
