--- a/sprint-3/second-page/shows.html
+++ b/sprint-3/second-page/shows.html
@@ -138,5 +138,9 @@
             </div>
         </footer>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" 
+    integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" 
+    crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../script.js"></script>
 </body>
 </html>
