created the shows.js file, reconstructed the shows page using JS

--- a/sprint-3/second-page/shows.html
+++ b/sprint-3/second-page/shows.html
@@ -45,66 +45,6 @@
                 <p></p>
                 <p></p>
             </div>
-            
-            <div class="main__show">
-                <h3 class="main__date-title main__h-three-font">DATE</h3>
-                <h2 class="main__date">Mon Dec 17 2018</h2>
-                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
-                <p class="main__venue main__p-font">Ronald Lane</p>
-                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
-                <p class="main__location main__p-font">San Francisco, CA</p>
-                <button class="main__tickets main__p-font">BUY TICKETS</button>
-            </div>
-
-            <div class="main__show">
-                <h3 class="main__date-title main__h-three-font">DATE</h3>
-                <h2 class="main__date">Tue Jul 18 2019</h2>
-                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
-                <p class="main__venue main__p-font">Pier 3 East</p>
-                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
-                <p class="main__location main__p-font">San Francisco, CA</p>
-                <button class="main__tickets main__p-font">BUY TICKETS</button>
-            </div>
-
-            <div class="main__show">
-                <h3 class="main__date-title main__h-three-font">DATE</h3>
-                <h2 class="main__date">Fri Jul 22 2019</h2>
-                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
-                <p class="main__venue main__p-font">View Lounge</p>
-                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
-                <p class="main__location main__p-font">San Francisco, CA</p>
-                <button class="main__tickets main__p-font">BUY TICKETS</button>
-            </div>
-
-            <div class="main__show">
-                <h3 class="main__date-title main__h-three-font">DATE</h3>
-                <h2 class="main__date">Sat Aug 12 2019</h2>
-                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
-                <p class="main__venue main__p-font">Hyatt Agency</p>
-                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
-                <p class="main__location main__p-font">San Francisco, CA</p>
-                <button class="main__tickets main__p-font">BUY TICKETS</button>
-            </div>
-
-            <div class="main__show">
-                <h3 class="main__date-title main__h-three-font">DATE</h3>
-                <h2 class="main__date">Fri Sep 05 2019</h2>
-                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
-                <p class="main__venue main__p-font">Moscow Center</p>
-                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
-                <p class="main__location main__p-font">San Francisco, CA</p>
-                <button class="main__tickets main__p-font">BUY TICKETS</button>
-            </div>
-
-            <div class="main__show">
-                <h3 class="main__date-title main__h-three-font">DATE</h3>
-                <h2 class="main__date">Wed Aug 11 2019</h2>
-                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
-                <p class="main__venue main__p-font">Pres Club</p>
-                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
-                <p class="main__location main__p-font">San Francisco, CA</p>
-                <button class="main__tickets main__p-font">BUY TICKETS</button>
-            </div>
         </div>
 
         <footer class="main__footer main__shows-footer">
@@ -141,6 +81,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" 
     integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" 
     crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../script.js"></script>
+    <script type="text/javascript" src="./shows.js"></script>
 </body>
 </html>
