configured the comment button

--- a/sprint-3/index.html
+++ b/sprint-3/index.html
@@ -86,9 +86,9 @@
                 <img class="main__form-image" src="./assets/Images/Mohan-muruge.jpg" alt="commentator image">
                 <div class="main__name-comment-holder">
                     <label class="main__form-name-label" for="name">NAME</label>
-                    <input class="main__form-name" type="text" placeholder="Enter your name" name="user_name" />
+                    <input class="main__form-name" type="text" placeholder="Enter your name" name="name" value="" />
                     <label class="main__form-comment-label" for="comment">COMMENT</label>
-                    <textarea class="main__form-comment" type="text" placeholder="Add a new comment" name="comment_name"></textarea>
+                    <textarea class="main__form-comment" type="text" placeholder="Add a new comment" name="comment" value=""></textarea>
                     <button class="main__form-button" type="submit">COMMENT</button>
                 </div>
             </form>
